Prevent line wrapping in legend items

--- a/media/editor.css
+++ b/media/editor.css
@@ -819,6 +819,7 @@ html[dir="rtl"] .math-inline {
   border: 1px solid #e0e0e0;
   border-radius: 3px;
   color: #000000;
+  white-space: nowrap;
 }
 
 .math-inline-placeholder .math-rendered {
